[package]
name = "taubyte-sdk"
version = "0.1.5"
description = "Taubyte rust SDK to use within the Taubyte VM"
edition = "2021"
license = "MIT"
homepage = "https://taubyte.com"
repository = "https://github.com/taubyte/rust-sdk"
keywords = ["webassembly", "wasm", "web3", "serverless"]
categories = ["wasm", "no-std"]
authors = ["Taubyte"]


[lib]
crate-type = ["lib"]
crate-name = "taubyte-sdk"

[dependencies]
bytes = "1.3.0"
http = "0.2"
cid = "0.7.0"